# mSet

./: CMakeLists.txt  README.md  test.sh
src/: main.cpp  main.cu
src/Renderer/: Renderer.h
src/Renderer/cuFiles/: Renderer.cu  Renderer.cuh
src/view/: view.cpp  view.h
