cmake_minimum_required(VERSION 3.0.0)
project(mSet VERSION 0.1.0 LANGUAGES CXX CUDA)

set(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS "-std=c++0x -O2")
SET(CMAKE_CUDA_FLAGS "-arch=sm_30")

include(CTest)
enable_testing()

find_package(CUDA QUIET REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})

ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})


file(GLOB_RECURSE SRC src/* )

cuda_add_executable(mSet ${SRC})

TARGET_LINK_LIBRARIES(mSet ${GTK3_LIBRARIES})


set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

